# FlashMLA_Windows_Linux_sm120

./: .gitignore  CMakeLists.txt  README.md  build_sm120.py  compile_single_test.bat  probe_debug.cu  run_single_nvcc.bat  setup.py  tmp_check_rows.cu  tmp_check_rows.exp  tmp_check_rows.lib  tmp_forward_smem.txt  tmp_fwdcuh.txt  tmp_hdr.txt  tmp_kernel_top.txt  tmp_sm100_mla.txt  tmp_snippet6.txt  tmp_snippet7.txt  tmp_snippet8.txt  tmp_snippet9.txt
benchmark/: bench_flash_mla.py  bench_flash_mla_training.py  check_env_triton.py
benchmark/triton/: __init__.py
csrc/: pybind.cpp
csrc/sm120/decode/dense/: config.h  helpers.h  params.h  splitkv_mla.cu  splitkv_mla.h  traits.h
csrc/sm120/decode/sparse_fp8/: dequant.h  splitkv_mla.cu  splitkv_mla.h  traits.h
csrc/sm120/prefill/dense/: fmha_bwd_kernel_sm120.cuh  fmha_cutlass_bwd_sm120.cu  fmha_cutlass_bwd_sm120.cuh  fmha_cutlass_fwd_sm120.cu  fmha_cutlass_fwd_sm120.cuh  interface.h  sm120_fallback_utils.h  sm120_kernel_traits.hpp
csrc/sm120/prefill/sparse/: bwd.cu  bwd.h  fwd.cu  fwd.h  traits.h
flash_mla/: __init__.py  flash_mla_interface.py
flash_mla_agent_a/: __init__.py  flash_mla_interface.py
patches/: cutlass_tmem_sm120_fallback.patch
scripts/: bwd_bench_tmp.py  sm120_tile_search.py  sm120_tmem_sweep.py
tests/: atomic_benchmark_results.csv  bin_bwd_compute_varlen_tmem_copy_tests.exp  bin_bwd_compute_varlen_tmem_copy_tests.lib  bin_bwd_dq_reduce_copy_tests.exp  bin_bwd_dq_reduce_copy_tests.lib  bin_bwd_epilogue_tmem_copy_tests.exp  bin_bwd_epilogue_tmem_copy_tests.lib  bin_bwd_epilogue_varlen_copy_tests.exp  bin_bwd_epilogue_varlen_copy_tests.lib  bin_bwd_mla_varlen_softmax_tmem_copy_tests.exp  bin_bwd_mla_varlen_softmax_tmem_copy_tests.lib  bin_bwd_smem_swizzle_race_tests.exp  bin_bwd_smem_swizzle_race_tests.lib  bin_bwd_softmax_tmem_copy_tests.exp  bin_bwd_softmax_tmem_copy_tests.lib  bin_bwd_tmem_pack_tests.exp  bin_bwd_tmem_pack_tests.lib  bin_bwd_varlen_compute_tmem_copy_tests.exp  bin_bwd_varlen_compute_tmem_copy_tests.lib  bin_bwd_varlen_softmax_tmem_copy_tests.exp  bin_bwd_varlen_softmax_tmem_copy_tests.lib  bin_forward_smem_limit_tests.exp  bin_forward_smem_limit_tests.lib  bin_forward_tile_shape_bounds_tests.exp  bin_forward_tile_shape_bounds_tests.lib  bin_fwd_correction_epilogue_hypothesis_tests.exp  bin_fwd_correction_epilogue_hypothesis_tests.lib  bin_fwd_correction_rescale_layout_tests.exp  bin_fwd_correction_rescale_layout_tests.lib  bin_fwd_correction_tmem_copy_layout_tests.exp  bin_fwd_correction_tmem_copy_layout_tests.lib  bin_fwd_correction_tmem_load_rank_tests.exp  bin_fwd_correction_tmem_load_rank_tests.lib  bin_fwd_mla_correction_store_copy_tests.exp  bin_fwd_mla_correction_store_copy_tests.lib  bin_fwd_softmax_p_store_copy_small_tests.exp  bin_fwd_softmax_p_store_copy_small_tests.lib  bin_fwd_softmax_p_store_layout_tests.exp  bin_fwd_softmax_p_store_layout_tests.lib  bin_fwd_softmax_pack_tests.exp  (+79 more)
tests/sm120/copy/enum_atoms/: tmem_atom_enum.cu
tests/sm120/copy/mem_pattern/: mem_pattern_tests.cu
tests/sm120/copy/race_alias/: tmem_race_alias_tests.cu
tests/sm120/layout/laws/: bwd_compute_varlen_tmem_copy_tests.cu  bwd_dq_reduce_copy_tests.cu  bwd_epilogue_tmem_copy_tests.cu  bwd_epilogue_varlen_copy_tests.cu  bwd_mla_varlen_softmax_tmem_copy_tests.cu  bwd_smem_swizzle_race_tests.cu  bwd_softmax_tmem_copy_tests.cu  bwd_tmem_pack_tests.cu  bwd_tmem_vector_tests.cu  bwd_varlen_compute_tmem_copy_tests.cu  bwd_varlen_softmax_tmem_copy_tests.cu  forward_smem_limit_tests.cu  forward_tile_shape_bounds_tests.cu  (+25 more)
windows/: compile_hypothesis_test.bat  compile_sm120_bwd_obj.bat  compile_sm120_bwd_obj_full.bat  run_decoding_bench_sm100.bat  run_decoding_bench_sm120.bat  run_ninja_debug.bat  run_sm120_tests.ps1
(+17 files in other folders)
